--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 *DS_Store
 testindex.html
 img/lmfao.png
+img/icons for gifs
+audio/zAudio/fashionOld.mp3
+audio/yAudio/politicsOld.mp3
+audio/xAudio/slangOld.mp3
